Bug 371529 - Playback interaction issues
Summary: Playback interaction issues
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-23 15:07 UTC by animtim
Modified: 2016-10-29 18:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2016-10-23 15:07:28 UTC
Playback used to stop at last selected frame when clicking stop or clicking on the canvas. 
This was very-useful expected behavior, as making a selection around a specific frame and alternate play/draw on this frame is a basic workflow action.

Now it doesn't anymore, pressing stop stops at random frames, and removes the selection in the timeline!

Only if I use the shortcuts for play/pause instead of clicking on the button works as expected.
This is a big regression, that I would call major issue as that's really annoying while animating
(and is a blocker for recording the tutorial videos..)

Reproducible: Always
Comment 1 animtim 2016-10-23 18:21:13 UTC
Ok, a few more infos:

After more testing on last stable (tested both 3.0 and 3.0.1.1), looks like I could already reproduce similar issue (selection in the timeline is reset and current frame change), but only on very rare occasions.
It happens mostly if I do stess-test with fast repeating, and everytime it happens I noticed the cache for the current frame is not yet loaded when I press stop.

So the bug was already there, but "rarely" happening.
Now it's triggered more easily making it more obvious, probably because of the cache issues
in https://bugs.kde.org/show_bug.cgi?id=371528 .
Comment 2 animtim 2016-10-23 18:38:55 UTC
Ok, now I can reproduce that easily on any version, and describe the actual issue here as:

-If a cache image is computed while playing (and so I see the quick notifications ""render animation" and "updating" while playing), when I stop in any way, current frame goes to next frame, and selected area in the timeline gets reset.

So that's not a regression, but still that's a bug that should be fixed.
Comment 3 Dmitry Kazakov 2016-10-24 12:15:05 UTC
Git commit 13bbe54e3a85cd79f5a102e6d9c7aefb70c15e16 by Dmitry Kazakov.
Committed on 24/10/2016 at 12:10.
Pushed by dkazakov into branch 'kazakov/undo-with-instant-preview-T2544'.

Fix recalculation of the cache when editing the last frame of the layer

M  +2    -4    libs/ui/kis_animation_cache_populator.cpp

http://commits.kde.org/krita/13bbe54e3a85cd79f5a102e6d9c7aefb70c15e16
Comment 4 wolthera 2016-10-29 14:16:23 UTC
Was this fixed or not?
Comment 5 animtim 2016-10-29 16:31:28 UTC
This is fixed in kazakov/undo-with-instant-preview-T2544 , which also has other changes that needed testing.

I've been testing it the last days, and didn't find new bugs that weren't also in master.
I guess it could be merged now, though if someone else want to give some testing...