Fix initial frame to be regenerated after playback

BUG:371529
Fixes T4133